# kobuki-yolop

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/hybrid_simulation/: ChangeLane.h  Observations.h  SetSpeed.h  VehicleStatus.h  VehicleStatusArray.h
devel/include/prius_msgs/: Control.h
devel/include/yocs_msgs/: ARPair.h  ARPairList.h  Column.h  (+35 more)
final_dataset/depth_obstacle/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  4.json  5.json  7.json  8.json  9.json
final_dataset/det_annotations/: reference.json
model/new_network/: eval_fps.py  inference.py  model.py  test.py  train.py
runs/logs/: events.out.tfevents.1720444676.naren-Inspiron-14-5425  events.out.tfevents.1720444888.naren-Inspiron-14-5425  events.out.tfevents.1720445004.naren-Inspiron-14-5425  events.out.tfevents.1720445043.naren-Inspiron-14-5425  events.out.tfevents.1720445159.naren-Inspiron-14-5425  events.out.tfevents.1720445299.naren-Inspiron-14-5425
src/my_package/: CMakeLists.txt  package.xml
src/my_package/launch/: kobuki_road_world.launch
src/my_package/scripts/: image_converter.py  mask_separate.py  mask_to_json.py  obstacle_separate.py  point_cloud_to_depth_image.py  sample.py  seg_train.py
src/my_package/scripts/tools/: demo.py  test.py
src/my_package/worlds/: omni_nav.sdf  road.world  road_world.sdf  yolo_nav_world.sdf
(+504 files in other folders)
